--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1183,7 +1183,7 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
-.contact .info {
+/* .contact .info {
   width: 100%;
   height: 100%;
   background: #fff;
@@ -1227,6 +1227,10 @@ section {
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
   background:black;
   color: #fff;
+}
+
+.contact .row{
+  justify-content: center;
 }
 
 .contact .php-email-form {
@@ -1326,7 +1330,7 @@ section {
   100% {
     transform: rotate(360deg);
   }
-}
+} */
 
 /*--------------------------------------------------------------
 # Breadcrumbs
